@@ -1,3 +1,13 @@
+2005-08-17  David Schleef  <ds@schleef.org>
+
+	* libswfdec/swfdec_bits.c: (swfdec_bits_syncbits): disable the
+	endpoint checking, because it's not important here.
+	* libswfdec/swfdec_render.c: (swfdec_render_iterate): change
+	errors into debugging
+	* libswfdec/swfdec_render_cairo.c: (swfdec_shape_render): handle
+	button mapping in cairo backend, the same crappy way we do
+	with libart.
+
 2005-08-11  David Schleef  <ds@schleef.org>
 
 	* libswfdec/actions_tags.c: (action_goto_frame),
